# amazon-chat-agent

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml
apps/api/: Dockerfile  pyproject.toml
apps/api/evals/: eval_retriever.py
apps/api/src/api/: app.py
apps/api/src/api/agents/: retrieval_generation.py
apps/api/src/api/api/: endpoints.py  middleware.py  models.py
apps/chatbot_ui/: Dockerfile  pyproject.toml
apps/chatbot_ui/src/chatbot_ui/: app.py
documentation/development-environment/: README.md
notebooks/01/: 02-RAG-preprocessing-amazon.ipynb  05-RAG-evals.ipynb  RAG-pipeline.ipynb
notebooks/phase01/: 01-explore-amazon-dataset.ipynb  03-RAG-pipeline.ipynb  04-evaluation-dataset.ipynb  05-RAG-evals.ipynb
qdrant_storage/: raft_state.json
qdrant_storage/collections/Amazon-items-collection-00/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/Amazon-items-collection-00/0/segments/072f56f9-0fbf-454b-a243-f9d29d8a3620/: mutable_id_tracker.mappings
qdrant_storage/collections/Amazon-items-collection-00/0/segments/70f0e925-fdbb-422a-b502-0009e8459712/: mutable_id_tracker.mappings
utils/: extractionScript.ipynb
